# Controllers

./: CMakeLists.txt  README.md  main.cpp
BaseClasses/: DeviceManager.hpp  ScannedData.hpp  SimpleLogger.hpp
Common/: ControllersFlags.hpp  CustomEnumTypes.cpp  CustomEnumTypes.hpp  Translators.cpp  Translators.hpp
DeviceController/: DeviceController.cpp  DeviceController.hpp
DeviceController/CameraManager/: CameraManager.cpp  CameraManager.hpp
DeviceController/ProfilometerManager/: CommandProvider.hpp  ErrorProvider.hpp  MsgManager.cpp  MsgManager.hpp  ProfilometerManager.cpp  ProfilometerManager.hpp  SerialPortManager.cpp  SerialPortManager.hpp
FileSystemController/: CMakeLists.txt  copies.txt  main.cpp
FileSystemController/Database/: DailyStatistic.txt
FileSystemController/Database/Healthy/: 124515_05122021.txt  124700_05122021.txt  125015_05122021.txt  125905_05122021.txt  213152_04122021.txt  213353_04122021.txt  213422_04122021.txt  213552_04122021.txt  213737_04122021.txt  214020_04122021.txt  214121_04122021.txt  214156_04122021.txt  214220_04122021.txt  214417_04122021.txt  214458_04122021.txt  214746_04122021.txt  214800_04122021.txt  215301_04122021.txt  215344_04122021.txt  220009_04122021.txt  220344_04122021.txt  220406_04122021.txt  220420_04122021.txt  220538_04122021.txt  220550_04122021.txt  220556_04122021.txt  220619_04122021.txt  220819_04122021.txt  220828_04122021.txt  220921_04122021.txt  220943_04122021.txt  220954_04122021.txt  (+66 more)
FileSystemController/FileSystem/: FileSystemController.cpp  FileSystemController.hpp  SimpleLogger.cpp
(+26 files in other folders)
